# canvas-cli

./: .gitignore  Main.hs  README.md  canvas-cli.cabal  canvas.cabal  default.nix  shell.nix
src/: Configuration.hs  Files.hs  Main.hs  Pages.hs
