name:           canvas-cli
version:        0.1.0.0
synopsis:       CLI utility to build your Canvas course out of .tex files
homepage:       https://kisonecat.com/
license:        MIT
license-file:   LICENSE
author:         Your Name
maintainer:     kisonecat@gmail.com
category:       CLI
build-type:     Simple
cabal-version:  >=1.10

executable canvas-cli
  main-is:          Main.hs
  build-depends:    base,
                    directory,
                    process,
                    filepath,
                    text,
                    canvas-haskell,
                    dotenv,
                    http-conduit,
                    http-client,
                    pandoc
  default-language: Haskell2010
