name:           canvas
version:        0.1.0.0
synopsis:       utility to build your Canvas course out of .tex files
homepage:       https://kisonecat.com/
license:        GPL-3.0
license-file:   LICENSE
author:         Your Name
maintainer:     kisonecat@gmail.com
category:       CLI
build-type:     Simple
cabal-version:  >=1.10

executable canvas
  main-is:          Main.hs
  other-modules:    Configuration
                  , Pages
                  , Files

  build-depends:    base,
                    directory,
                    process,
                    filepath,
                    text,
                    canvas-haskell,
                    dotenv,
                    mtl,
                    http-conduit,
                    http-client,
                    optparse-applicative,
                    pandoc,
                    http-client,
                    http-client-tls,
                    bytestring,
                    http-types,
                    aeson
  default-language: Haskell2010
  hs-source-dirs:      src
